plugins {
    id 'com.google.cloud.tools.jib' version '3.4.0'
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'java'
    id "org.sonarqube" version "4.4.1.3373"
//    id 'nebula.release' version '11.0.0'
    id 'jacoco'
    id "org.flywaydb.flyway" version "10.12.0"
//    id "net.ltgt.apt" version "0.21"
//    id 'pmd'
}

sonarqube {
    properties {
        property 'sonar.login', System.getenv('SONAR_DATA_SERVICE_TOKEN')
        property 'sonar.host.url', 'https://sonarcloud.io'
        property 'sonar.organization', 'relay-service'
        property 'sonar.projectKey', 'relay-data-service'
        property 'sonar.jacoco.reportPaths', 'build/reports/jacoco/test/jacocoTestReport.xml'
    }
}

group = 'com.relay'
version = '0.0.2-SNAPSHOT'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
}

repositories {
//    jcenter()
    mavenCentral()
    mavenLocal()
//    maven { url 'https://repo.spring.io/snapshot' }
//    maven { url 'https://repo.spring.io/milestone' }
}

ext {
//    set('springCloudVersion', "2022.0.0")
    set('testcontainersVersion', "1.17.3")
    set('swaggerVersion', "2.9.2")
//    set('dekorateVersion', "2.5.0")
    set('mapStructVersion', "1.4.1.Final")
    set('testcontainersVersion', "1.18.0")
}




dependencies {
//    project 'ru.relay.infrastructure:db'
//    implementation 'ru.relay.infrastructure:db:0.0.1'
//    implementation 'ru.relay.infrastructure:local-postgres:0.0.1'
//    implementation 'ru.relay.infrastructure:id:0.01'

    runtimeOnly 'com.h2database:h2'
    testImplementation "org.springframework.boot:spring-boot-starter-test"

//    implementation("io.springfox:springfox-swagger2:${swaggerVersion}") {
//        exclude group: 'org.mapstruct', module: 'mapstruct'
//    }
//    implementation "io.springfox:springfox-swagger-ui:${swaggerVersion}"
//    implementation "org.mapstruct:mapstruct-jdk8:${mapStructVersion}"
//    implementation 'org.springframework.boot:spring-boot-starter-security'
//    implementation 'org.springframework.cloud:spring-cloud-starter-zipkin'
    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
    testImplementation("org.springframework.boot:spring-boot-starter-data-jpa")
    implementation("commons-beanutils:commons-beanutils:1.9.4")
    compileOnly 'org.projectlombok:lombok'
    implementation "org.testcontainers:postgresql:1.17.6"
    implementation "org.springframework.boot:spring-boot-starter-web"
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation "org.mapstruct:mapstruct:${mapStructVersion}"
//    implementation "io.springfox:springfox-boot-starter:3.0.0"
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
//    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
//    annotationProcessor "io.dekorate:kubernetes-spring-starter:${dekorateVersion}"
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation 'org.springframework.boot:spring-boot-devtools'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:postgresql'

    annotationProcessor "org.mapstruct:mapstruct-processor:${mapStructVersion}"
    testAnnotationProcessor "org.mapstruct:mapstruct-processor:${mapStructVersion}"
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.jetbrains:annotations:16.0.2'
    implementation 'org.flywaydb:flyway-core'

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

//    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
//    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
//    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-ribbon', version: '2.2.9.RELEASE'
//    implementation('org.springframework.cloud:spring-cloud-starter-kubernetes-fabric8-all:3.0.0')

}

jacoco {
    toolVersion = "0.8.12"
}

jacocoTestReport {
    reports {
//        xml.enabled true
//        html.enabled true
        xml.required.set(true)
        html.required.set(true)
    }
}
test {
    useJUnitPlatform {
//        includeTags 'unit', 'integration', ''
    }
}

check.dependsOn jacocoTestReport

dependencyManagement {
    imports {
        mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
//        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

jib {
    from {
        image = 'eclipse-temurin:22-alpine'
    }
    to {
        image = 'alexunc/data-service'
//        auth {
//            username = System.getenv('DOCKER_LOGIN')
//            password = System.getenv('DOCKER_PASS')
//        }
        tags = [version, 'latest']
    }
    container {
//        jvmFlags = ['-Dmy.property=example.value', '-Xms512m', '-Xdebug']
//        mainClass = 'mypackage.MyApp'
//        args = ['some', 'args']
        ports = ['9090', '8080']
//        labels = [key1:'value1', key2:'value2']
//        format = 'OCI'
    }
}

//tasks.named('test') {
//    useJUnitPlatform()
//}